[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyparsing"
authors = [{name = "Paul McGuire", email = "ptmcg.gm+pyparsing@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.optional-dependencies]
diagrams = [
    "railroad-diagrams",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/pyparsing/pyparsing/"

[tool.flit.sdist]
include = [
    "CHANGES",
    "CODE_OF_CONDUCT.rst",
    "CONTRIBUTING.md",
    "LICENSE",
    "docs",
    "examples",
    "tests",
    "tox.ini",
]
exclude = [
    ".github",
    "docs/_build",
    "tests/__pycache__",
    "pyparsing_archive.py",
    "tests/.mypy_cache",
    "update_pyparsing_timestamp.py",
]
